# marketplace-api

./: .env.development  .gitattributes  README.md  docker-compose.yml
auth-service/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
auth-service/app/: main.py
auth-service/app/api/: auth.py
auth-service/app/core/: auth.py  config.py  init_db.py  security.py
auth-service/app/db/: session.py
auth-service/app/models/: auth.py
auth-service/app/repository/: account.py
auth-service/app/schemas/: auth.py  token.py
auth-service/app/services/: auth.py  redis_client.py
auth-service/migration/: env.py
auth-service/migration/versions/: 3a01dcf65f19_initial.py  670c4804ff8a_initial.py  bdc536c01309_initial.py
auth-service/scripts/: entrypoint.sh  init_db.py
orders-service/: Dockerfile  alembic.ini  main.py  pyproject.toml
orders-service/app/: main.py
orders-service/app/api/: cart.py  cart_item.py  order.py  product.py
orders-service/app/core/: auth.py  config.py  init_db.py  security.py
orders-service/app/db/: session.py
orders-service/app/models/: __init__.py  cart.py  cart_item.py  order.py  order_item.py  product.py
orders-service/app/repository/: cart.py  cart_item.py  order.py  product.py
orders-service/app/schemas/: cart.py  cart_item.py  order.py  order_item.py  product.py  token.py
orders-service/app/services/: cart.py  cart_item.py  order.py  product.py  redis_client.py
orders-service/migration/: env.py
orders-service/migration/versions/: 3c9428c28b53_initial.py  (+2 more)
orders-service/scripts/: entrypoint.sh
